--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "lodash": "^4.17.21",
     "notiflix": "^3.2.6",
     "react": "^18.1.0",
-    "react-date-picker": "^9.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-router": "^6.8.0",
