--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.2.5",
     "lodash": "^4.17.21",
     "notiflix": "^3.2.6",
+    "overlayscrollbars": "^2.0.3",
     "react": "^18.1.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
